--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
                         </button>
                     -->
                     <button id="bttn_login" type="button">
-                        Iniciar Sesión
+                        Manejo Usuarios
                     </button>
                 </nav>
             </header>
@@ -106,7 +106,7 @@
                         "block"
                 }, 2000)
                 document.getElementById("bttn_login"),addEventListener("click",function(e) {
-                    location.href = "/login"
+                    location.href = "/miembros"
                 })
             })
         </script>
